# SolarChat

./: README.md  pyproject.toml  requirements.txt  rxconfig.py
SolarChat/: SolarChat.py  state.py
SolarChat/components/: chat.py  modal.py  navbar.py
