[tool.poetry]
name = "solarchat"
version = "0.0.0"
description = ""
authors = ["RektPunk <rektpunk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
reflex = "^0.5.7"
openai = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
